# ecg1d_cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  EXPERIMENT_S_CONDITIONING.zh.md  GHOST_STATE_MECHANISM.zh.md  KICK_CONVERGENCE_SESSION.md  N2_Kicked_dynamics.md  N2_summary.md  PHASE_A_RESULTS.md  REFERENCE.zh.md  SVM_IMPROVEMENT_SUMMARY.md  VARGA_SVM_NOTES.zh.md  basis_params.cpp  basis_params.hpp  delta_N_2.zh.md  dump_derivatives-checkpoint.py  dump_derivatives.py  dump_reference.py  hamiltonian_gradient.cpp  hamiltonian_gradient.hpp  hello  interaction_kernels.hpp  main.cpp  main_simple.cpp  main_verification.cpp  meeting.md  observable_derivatives.hpp  pair_cache.cpp  pair_cache.hpp  qa.md  stepb_test.cpp  tdvp_solver.cpp  tdvp_solver.hpp  validate.py  validate_hamiltonian_gradient.py  validate_phase2.py  validate_phase3.py
.ipynb_checkpoints/: main-checkpoint.cpp
comsol_evanes/: EVANESCENT_SIM_SUMMARY.md  HIGH_DENSITY_EXCLUSION.zh.md  analyze_results.py  collect_results.py  compare_seeds.py  evanescent_sim.py  merge_seeds.py  multi_bounce.py  run_seeds.txt
dachuang/: .gitignore  INTENSITY_ANALYSIS.md  analyze_grid.py  detect_adhesion.py  grid_analysis_results.json  spot_intensity_data.json  spot_morphology.py  subregion_analysis.py  中期学术报告：文理学院物理学马泽炫国家级创业实践项目.docx  创业进展报告：文理学院物理学马泽炫国家级创业实践项目.docx  结项报告.tex
dachuang/reference/: INTENSITY_ANALYSIS.md
dachuang/reports/: 结项报告.tex
html/: claude_edit_suggestion.html  claude_main_cpp_study.html  ecg1d_main_principle.html  hardware_qa_2026-04-21.html  kick_tdvp_strategy.html  main_simple_tdvp_diagnosis.html  main_verification_process_math.html  n1_verification_basis_tdvp_failure_review.html  n2_simulation_problem_analysis.html  rothe_implementation_plan.html  task10_report.html  task5_realtime_status.html  task5_report.html  tdvp_conservation_proof.html  tdvp_full_report.html
past_md/: ENERGY_VARIANCE_THEORY.md  EXPERIMENT_S_CONDITIONING.zh.md  N2_summary.md  OPTIMIZATION_PLAN.zh.md  PHASE_A_RESULTS.md  TDVP_STEP4_CH9_QA.md  VARGA_SVM_REFERENCE.md  WAVEFUNCTION_DYNAMICS_MAIN_VERIFICATION.md  math.md
runs/N2K6/: plot_log_diagnostics.py
runs/no_wiener_N1K5/: plot_log_diagnostics.py
scripts/: plot_step4_moments.py  plot_step4_wavefunction.py  plot_verification.py
src/: bessel.hpp  derivatives.cpp  derivatives.hpp  h_squared.cpp  h_squared.hpp  hamiltonian.cpp  hamiltonian.hpp  interaction_kernels.cpp  kick_operator.cpp  kick_operator.hpp  kicked_evolution.cpp  kicked_evolution.hpp  kicked_exact.cpp  kicked_exact.hpp  observable_derivatives.cpp  observables.cpp  observables.hpp  permutation.cpp  permutation.hpp  physical_constants.hpp  realtime_tdvp.cpp  realtime_tdvp.hpp  rothe_operator.cpp  rothe_operator.hpp  rothe_step.cpp  rothe_step.hpp  svm.cpp  svm.hpp  target_fitting.cpp  target_fitting.hpp  tdvp_solver.cpp  tdvp_solver.hpp  types.hpp
src/verify/: common.cpp  common.hpp  ecg_wavefunction.cpp  ecg_wavefunction.hpp  (+12 more)
txt_task/: main_verification_cmds.txt  main_verification_run.txt  realtime_N1_K5_no_wiener_cmds.txt  realtime_N1_K5_no_wiener_rk45_cmds.txt  realtime_N1_K5_rcond1e-6_cmds.txt  realtime_N1_K5_rcond1e-8_cmds.txt  realtime_N2_K5_cmds.txt  realtime_N2_K5_rcond1e-6_cmds.txt  realtime_N2_K5_rcond1e-8_cmds.txt  realtime_N2_K6_cmds.txt  realtime_N2_K7_cmds.txt  realtime_N2_K7_dt5e-4_cmds.txt  realtime_N2_K7_no_wiener_cmds.txt  realtime_N2_K9_cmds.txt  step4_per_step_checklist_cmds.txt  step4_resume_after_run.txt  task10_cmds.txt  task10_rk45_cmds.txt  task7_cmds.txt  task9_cmds.txt
useful_result_April/: N1_E0_K3_vs_K5_explanation.txt  N1_K5_dead_gaussian_diagnosis.txt  N1_K5_energy_explanation.txt  N1_realtime_K3_vs_K5_explanation.txt  N2_x_p_zero_explanation.txt  rcond_explanation.txt
(+2 files in other folders)
